Bug 918707 - Return syntax error if url is invalid, r=khuey